--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,7 @@
 .tabs {
   display: flex;
   margin-bottom: 15px;
+  justify-content: center;
 }
 .tabs div:first-child {
   margin-right: 20px;
@@ -49,7 +50,7 @@
   cursor: pointer;
 }
 .tabs div.active {
-  background-color: rgb(0, 66, 207);
+  background-color: rgb(207, 0, 97);
 }
 
 .tabsText {
@@ -60,16 +61,23 @@
   margin-right: 20px;
 }
 .tabsText div {
-  padding: 3px 20px;
+  padding: 0.6em 1.2em;
   border-radius: 8px;
   cursor: pointer;
 }
 .tabsText div.active {
-  background-color: rgb(0, 66, 207);
+  color: black;
+  background-color: yellow;
 }
 
 .danger {
   color: red;
+  background: #ff000040;
+  font-size: 18px;
+  padding: 5px 15px;
+  border-radius: 8px;
+  position: relative;
+  right: -40px;
 }
 .encrypt {
   background-color: rgb(87, 87, 87);
@@ -79,7 +87,7 @@
   border-radius: 12px;
 }
 .copyText {
-  background-color: rgb(255, 255, 0);
+  background-color: rgb(30, 255, 0);
   display: inline-block;
   padding: 5px 15px;
   border-radius: 5px;
@@ -93,3 +101,14 @@
   font-weight: bold;
   cursor: pointer;
 }
+.warning {
+  color: yellow;
+}
+.form-section {
+  position: relative;
+}
+/* .form-section label {
+  position: absolute;
+  top: -10px;
+  padding: 0px 10px;
+} */
